添加图床加速

--- a/source/_posts/记录第一次创建博客的过程.md
+++ b/source/_posts/记录第一次创建博客的过程.md
@@ -2,5 +2,29 @@
 title: 记录第一次创建博客的过程
 date: 2021-11-30 17:22:15
 tags:
+top_img: false
 cover: https://i.loli.net/2020/05/19/aKOcLiyPl2JQdFD.png
 ---
+
+ - 本地hexo
+ - 设置butterfly
+ - 一些配置更改  主页透明  
+ - 图床
+
+
+PicGo下载链接
+
+github下载
+https://github.com/pinknee/img-bed/raw/master/img-bed/exe/PicGo-Setup-2.3.0-x64.exe
+
+百度网盘
+链接：https://pan.baidu.com/s/1R3suIotc3k5n3NCUKaCktA 
+
+
+迅雷下载
+https://pan.xunlei.com/s/VMpvaIJO9uXbL0XO7GSBwIDsA1
+
+qefv
+
+
+
