markdown语法  博客记录

--- a/source/_posts/记录第一次创建博客的过程.md
+++ b/source/_posts/记录第一次创建博客的过程.md
@@ -1,31 +1,67 @@
 ---
 title: 记录第一次创建博客的过程
 date: 2021-11-30 17:22:15
+categories:
+ - [博客搭建]
+ - [学习记录]
 tags:
+ - 学习记录
 top_img: false
-abbrlink: firstCreate
-cover: https://i.loli.net/2020/05/19/aKOcLiyPl2JQdFD.png
+abbrlink: first
+cover: https://cdn.jsdelivr.net/gh/pinknee/img-bed/img/butterfly.jpg
 ---
 
- - 本地hexo
- - 设置butterfly
- - 一些配置更改  主页透明  
- - 图床
+## 初识博客
 
+​		大学的时候也看到过很多大神的博客，那个时候的我，没有想法，没有目标，浑噩度日，学习也不好，想过改变，但都因为没有计划，或者说没有严格执行计划都搁置了，可以说我是一个彻头彻尾的`loser`了吧，~~哈哈哈哈哈~~。
 
-PicGo下载链接
+​		那为什么现在又开始写了呢，是因为我今年刚毕业，现在在的公司工资比较低，我想先好好的以不是学生的身份去接触这个行业，学习一阵子，选择一个方向，~~但其实大学时候我也有很多学习的机会，是我自己笨蛋没有把握好青春罢了~~。就是作为一个~~程序员~~，可能我现在还算不上一个程序员吧，总得有一个自己博客吧，正好网上看到了别人做的，看起来样式很好看。
 
-github下载
-https://github.com/pinknee/img-bed/raw/master/img-bed/exe/PicGo-Setup-2.3.0-x64.exe
+## 选择hexo
 
-百度网盘
-链接：https://pan.baidu.com/s/1R3suIotc3k5n3NCUKaCktA 
+​		一开始也没有接触太多，觉得人家好看就模仿呗， 中间看了好多人的博客，又浪费了很多时间，总之事情就是没有按照预期的进行哈哈哈哈哈哈哈。
 
+## 开始搭建
 
-迅雷下载
-https://pan.xunlei.com/s/VMpvaIJO9uXbL0XO7GSBwIDsA1
+### node
 
-qefv
+​		简单的了解了别人的博客之后就开始搭建环境了，首先是node.js，大学的时候学vue的时候学过一点点，大概还记得，结合百度也都整出来了。
+
+### git
+
+​		大学的时候没学过这玩意，前阵子看`马士兵`的视频简单了了解了一下基本语法指令，安装啥的也没遇到问题。
+
+### hexo
+
+​		初始化环境 ，都是根据网上来的。
+
+### butterfly
+
+​		换了个主题，搞样式搞了很久，方向跑偏了.....
+
+## 遇到的问题
+
+### node版本
+
+​		不管什么软件，我都喜欢用最新的东西，我记得一开始用的是16版本，发现hexo跑不起来，后来换了12的版本。
+
+### 没去官网
+
+​		后来发现人家hexo官网上啥都有，自己在那抠唆半天啥也没干好
+
+### 没好好百度
+
+​		按道理讲，`百度`上啥都有，但是内容杂乱，确实会遇到不好找资料的情况，再加上我这个`懒癌晚期`选手，自然做不成了。
+
+### 轻言放弃
+
+​		我这人属于那种`顶级退堂鼓选手`，什么事情都是三分钟热度，导致做什么都做不成，博客搭建也就搁置了。看一下发表日期和网站建立日期就知道我这段时间又在浪费生命......
+
+## 遇见狂神
+
+​		闲来无事去B站搜了一下Spring，看到点击量最高的`狂神`，就点进去看了一两集视频，又翻到了今年年初的狂总发的建立公司的视频，大概讲的就是公司的架构、未来方向之类的，也比较有感触，决定把狂神的视频看完，看到他19年的基础课中也有提到博客的重要性，正好我把我这个博客搭建完，我之前一直纠结于主题样式，却忘了建立博客的目的！
+
+​		后面我会把在狂神那里学的笔记放在这里，便于后面复习用。
 
 
 
